tests/ui/try_transmute_mut.stable.stderr
error: cannot find macro `transmute_mut` in this scope
   --> $DIR/try_transmute_mut.rs:38:40
    |
 38 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^
    |
   ::: $WORKSPACE/src/macros.rs:852:1
    |
852 | macro_rules! try_transmute_mut {
    | ------------------------------ similarly named macro `try_transmute_mut` defined here
    |
help: a macro with a similar name exists
    |
 38 |     let src_not_from_bytes: &mut Dst = try_transmute_mut!(&mut Src);
    |                                          ++++
help: consider importing one of these macros
    |
 11 + use zerocopy::transmute_mut;
    |
 11 + use zerocopy_renamed::transmute_mut;
    |

error: cannot find macro `transmute_mut` in this scope
   --> $DIR/try_transmute_mut.rs:30:40
    |
 30 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
    |                                        ^^^^^^^^^^^^^
    |
   ::: $WORKSPACE/src/macros.rs:852:1
    |
852 | macro_rules! try_transmute_mut {
    | ------------------------------ similarly named macro `try_transmute_mut` defined here
    |
help: a macro with a similar name exists
    |
 30 |     let src_not_from_bytes: &mut Dst = try_transmute_mut!(&mut Src);
    |                                          ++++
help: consider importing one of these macros
    |
 11 + use zerocopy::transmute_mut;
    |
 11 + use zerocopy_renamed::transmute_mut;
    |

error[E0425]: cannot find type `Dst` in this scope
  --> $DIR/try_transmute_mut.rs:30:34
   |
30 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                  ^^^ not found in this scope

error[E0425]: cannot find type `Dst` in this scope
  --> $DIR/try_transmute_mut.rs:38:34
   |
38 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                  ^^^ not found in this scope

error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:22:63
    |
 22 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:816:14
    |
813 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
816 |         Dst: TryFromBytes + IntoBytes,
    |              ^^^^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `util::NotZerocopy: IntoBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:22:63
    |
 22 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 68 others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::try_transmute_mut`
   --> $WORKSPACE/src/util/macro_util.rs:816:29
    |
813 |     pub fn try_transmute_mut(self) -> Result<&'a mut Dst, ValidityError<&'a mut Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
816 |         Dst: TryFromBytes + IntoBytes,
    |                             ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::try_transmute_mut`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:22:33
    |
 22 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_mut.rs:22:63
    |
 22 |     let dst_not_try_from_bytes: Result<&mut NotZerocopy, _> = try_transmute_mut!(src);
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
